--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+#profile-submission {
+  width:20%;
+  margin:auto;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
