Started setting up the framework for how to process images that are selected for upload. Still figuring out where to get the axios post URL from...

--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,7 @@
     transform: rotate(360deg);
   }
 }
+/* 1st table for:
+photo, name, desc */
+/* 2nd table for users and passwords */
+/* My PC is a server? */
